--- a/Cuda.html
+++ b/Cuda.html
@@ -6,12 +6,19 @@
         <link rel="stylesheet" type="text/css" href="Cuda.css">
     </head>
     <body>
-        <div id="mama">
-            <div class="first">
-                <img class="logo" src="sources/logo.png" alt="logo Cuda" title="logo Cuda" />
+        <div id="home">
+            <div class="header">
+                <img src="sources/logo.png" alt="logo Cuda" title="logo Cuda">
+                <div id="menu">
+                    <ul>HOME</ul>
+                    <ul>ABOUT</ul>
+                    <ul>WORK</ul>
+                    <ul>BLOG</ul>
+                    <ul>CONTACT</ul>
+                </div>
             </div>
-            <div class="menu">
-                <p>toto</p>
+            <div class="text-home">
+                <p></p>
             </div>
         </div>
     </body>
