--- a/Cuda.html
+++ b/Cuda.html
@@ -10,15 +10,15 @@
             <div class="header">
                 <img src="sources/logo.png" alt="logo Cuda" title="logo Cuda">
                 <div id="menu">
-                    <ul>HOME</ul>
-                    <ul>ABOUT</ul>
-                    <ul>WORK</ul>
-                    <ul>BLOG</ul>
-                    <ul>CONTACT</ul>
+                    <ul>
+                        <li>HOME</li>
+                        <li>ABOUT</li>
+                        <li>WORK</li>
+                        <li>BLOG</li>
+                        <li>CONTACT</li>
+                    </ul>
                 </div>
-            </div>
-            <div class="text-home">
-                <p></p>
+                <h1>Hi there! We are </h1>
             </div>
         </div>
     </body>
